# cool-cpp

./: CMakeLists.txt  DisplayTypes.cpp  EnumSizes.cpp  README.md
Debug/: CMakeCache.txt  DisplayTypes  EnumSizes  Makefile  cmake_install.cmake
build-support/: Colors.cmake  DetectBuildPlatform.cmake  DetectVirtualMachine.cmake  DirectoryBasedBuildType.cmake  FindGit.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
doc/: Strongly_Typed_C++11_Enums.md
